[tool.poetry]
name = "getmyapidata"
version = "1.1.0"
description = "A GUI-based tool to retrieve All of Us participant data using the InSite API."
authors = ["Kevin J. Delaney <kjdelaney@ucsd.edu>, Brian E. Fox, <befox@ucsd.edu>"]
license = """
This software is Copyright © 2025 The Regents of the University of California. All Rights Reserved. Permission to copy, modify, and distribute this software and its documentation for educational, research and non-profit purposes, without fee, and without a written agreement is hereby granted, provided that the above copyright notice, this paragraph and the following three paragraphs appear in all copies. Permission to make commercial use of this software may be obtained by contacting:

Office of Innovation and Commercialization
9500 Gilman Drive, Mail Code 0910
University of California
La Jolla, CA 92093-0910
innovation@ucsd.edu

 This software program and documentation are copyrighted by The Regents of the University of California. The software program and documentation are supplied “as is”, without any accompanying services from The Regents. The Regents does not warrant that the operation of the program will be uninterrupted or error-free. The end-user understands that the program was developed for research purposes and is advised not to rely exclusively on the program for any reason.

IN NO EVENT SHALL THE UNIVERSITY OF CALIFORNIA BE LIABLE TO ANY PARTY FOR DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, INCLUDING LOST PROFITS, ARISING OUT OF THE USE OF THIS SOFTWARE AND ITS DOCUMENTATION, EVEN IF THE UNIVERSITY OF CALIFORNIA HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. THE UNIVERSITY OF CALIFORNIA SPECIFICALLY DISCLAIMS ANY WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE SOFTWARE PROVIDED HEREUNDER IS ON AN “AS IS” BASIS, AND THE UNIVERSITY OF CALIFORNIA HAS NO OBLIGATIONS TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS.
"""
readme = "README.md"
packages = [{include = "src"},]

[tool.coverage.run]
source = ['getmyapidata']

[tool.poetry.dependencies]
python = "^3.10, <4.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.12.14"
aiosignal = "1.4.0"
altgraph = "0.17.4"
asttokens = "2.4.1"
asyncio = "3.4.3"
attrs = "25.3.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
decorator = "5.1.1"
disutils = "1.4.32.post2"
executing = "2.0.1"
frozenlist = "1.7.0"
idna = "3.7"
ipython = "8.21.0"
jedi = "0.19.1"
logging = "0.4.9.6"
matplotlib-inline = "0.1.6"
multidict = "6.6.3"
numpy = "1.26.4"
packaging = "25.0"
pandas = "2.1.3"
parso = "0.8.3"
pefile = "2023.2.7"
prompt-toolkit = "3.0.43"
propcache = "0.3.2"
pure-eval = "0.2.2"
pygments = "2.17.2"
python-dateutil = "2.8.2"
pytz = "2024.1"
pywin32 = "311"
pywin32-ctypes = "0.2.3"
requests = "2.32.4"
setuptools = "80.9.0"
six = "1.16.0"
stack-data = "0.6.3"
traitlets = "5.14.1"
typing-extensions = "4.14.1"
tzdata = "2024.1"
urllib3 = "2.5.0"
wand = "0.6.13"
wcwidth = "0.2.13"
wxpython = "4.2.3"
yarl = "1.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getmyapidata = "src.__main__:main"

[tool.pylint.main]
extra-paths=["/src/getmyapidata/"]
